--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ body {
 <body>
 
 <div class="centerText">
-    Happy<br>
-    Valentine’s<br>
+    Happy
+    Valentine’s
     Day ❤️
 </div>
 
@@ -130,5 +130,6 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
