--- a/index.html
+++ b/index.html
@@ -38,14 +38,6 @@ body {
     animation: fadeIn 3s forwards, pulse 3s infinite 3s;
 }
 
-/* Mobile-specific text scaling */
-@media (max-width: 768px) {
-    .centerText {
-        font-size: 14vw;   /* bigger on phones */
-        top: 30%;
-    }
-}
-
 /* Fade-in animation */
 @keyframes fadeIn {
     to { opacity: 1; }
@@ -101,9 +93,7 @@ body {
 
 <!-- Main text -->
 <div class="centerText">
-    Happy
-    Valentine’s
-    Day ❤️
+    Happy Valentine’s Day ❤️
 </div>
 
 <!-- Audio -->
@@ -155,3 +145,4 @@ playBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
