--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@ body {
     opacity: 0;
     animation: fadeIn 3s forwards, pulse 3s infinite 3s;
 }
+.mainLine {
+    white-space: nowrap;   /* Forces single line */
+}
+
+.bigHeart {
+    font-size: 2.5em;      /* Makes heart much bigger */
+    margin-top: 15px;
+    animation: heartbeat 1.5s infinite;
+}
+
+/* Strong heartbeat animation */
+@keyframes heartbeat {
+    0% { transform: scale(1); }
+    25% { transform: scale(1.3); }
+    40% { transform: scale(1); }
+    60% { transform: scale(1.3); }
+    100% { transform: scale(1); }
+}
 
 /* Fade-in animation */
 @keyframes fadeIn {
@@ -93,7 +111,8 @@ body {
 
 <!-- Main text -->
 <div class="centerText">
-    Happy Valentine’s Day ❤️
+    <div class="mainLine">Happy Valentine’s Day</div>
+    <div class="bigHeart">❤️</div>
 </div>
 
 <!-- Audio -->
@@ -145,4 +164,5 @@ playBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
