--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <title>Happy Valentine's Day</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SPB8E4S1NW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SPB8E4S1NW');
+</script>
 
 <style>
 body {
@@ -170,3 +179,4 @@ playBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
